--- a/users/templates/users/run_tracking.html
+++ b/users/templates/users/run_tracking.html
@@ -1,4 +1,4 @@
-<!-- users/templates/users/track_run.html -->
+<!-- users/templates/users/run_tracking.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -37,5 +37,6 @@
             <a href="{% url 'home' %}" class="btn btn-primary">Back to Home</a>
         </div>
     </div>
+ <button >View Run Log</button>
 </body>
 </html>
